--- a/transaction/package.json
+++ b/transaction/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "analytics-consumer",
+  "name": "transaction",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -25,14 +25,11 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/microservices": "^7.0.7",
     "@nestjs/platform-express": "^7.0.0",
-    "@nestjs/platform-socket.io": "^7.0.7",
-    "@nestjs/platform-ws": "^7.0.7",
-    "@nestjs/websockets": "^7.0.7",
     "kafkajs": "^1.12.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "socket.io-redis": "^5.2.0"
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
@@ -41,7 +38,6 @@
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
     "@types/node": "^13.9.1",
-    "@types/socket.io": "^2.1.4",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
